--- a/blog_common/pom.xml
+++ b/blog_common/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>md2x</artifactId>
             <version>1.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
